Fix navbar title underline alignment

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -115,7 +115,7 @@ header nav a.text-yellow-400:hover {
   content: '';
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -2px;
   width: 100%;
   height: 2px;
   background-color: var(--color-links);
